<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_logo"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <EditText
            android:id="@+id/str1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="name"
            android:hint="@string/str1_placeholder"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#A1887F"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/str2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="name"
            android:hint="@string/str2_placeholder"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#A1887F"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/compare_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginVertical="18dp"
            android:text="@string/btn_txt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/result_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
